<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    tools:context=".activities.TransactionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/update"
        android:textSize="28dp"
        android:id="@+id/main_header"
        android:padding="9dp"
        android:fontFamily="@font/poppins_thin"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@color/orange"/>

    <EditText
        android:layout_width="match_parent"
        android:fontFamily="@font/poppins_light"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/amount"
        android:textColor="@color/black"
        android:id="@+id/amount_added"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textSize="20dp"
        android:padding="15dp"
        android:inputType="number"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:fontFamily="@font/poppins_light"
        android:textAlignment="textStart"
        android:gravity="start"
        android:background="@drawable/edittext_bg"
        android:hint="@string/note"
        android:id="@+id/note_added"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:inputType="text"
        android:padding="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/isExpense"
            android:text="@string/expense"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_bg"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/isIncome"
            android:text="@string/income"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:id="@+id/update_button"
        android:text="@string/new_update"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:id="@+id/delete_button"
        android:text="@string/new_delete"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>