<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_heading"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30dp"
                />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/intro_pic"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/register_button"
        android:id="@+id/register_intro_button"
        android:layout_margin="7dp"
        android:textColor="#fff"
        android:backgroundTint="@color/orange"
        android:textStyle="bold"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:id="@+id/login_intro_button"
        android:layout_margin="7dp"
        android:textColor="#fff"
        android:backgroundTint="@color/orange"
        android:textStyle="bold"/>

</LinearLayout>