<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upper_layout"
        android:orientation="horizontal"
        android:background="@color/orange">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/refresh"
            android:id="@+id/refresh"
            android:layout_margin="12dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/dashboard"
            android:textSize="30dp"
            android:id="@+id/dashboard"
            android:layout_marginBottom="5dp"
            android:padding="9dp"
            android:fontFamily="@font/poppins_thin"
            android:layout_marginLeft="38dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@color/orange"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logout"
            android:id="@+id/logout"
            android:layout_margin="12dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/upper_layout"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:backgroundTint="@color/g_card_background"
        android:id="@+id/details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/income_display"
                    android:layout_height="wrap_content"
                    android:text="000"
                    android:layout_alignParentRight="true"
                    android:textSize="22dp"
                    android:textColor="@color/green"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="000"
                    android:layout_alignParentRight="true"
                    android:id="@+id/expense_display"
                    android:textSize="22dp"
                    android:textColor="@color/g_red"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="000"
                    android:layout_alignParentRight="true"
                    android:id="@+id/balance_display"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    />
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:id="@+id/recycler_view_transactions"
        tools:listitem="@layout/each_item_recycler"/>

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:id="@+id/add_transaction"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/orange"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>